snapshots/syntax/library/functions/interaction/input/input_if_statement.snap
---
source: vb6parse/src/syntax/library/functions/interaction/input.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: LenKeyword
                      text: Len
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: CallExpression
                              children:
                                - kind: InputKeyword
                                  text: Input
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children:
                                    - kind: Argument
                                      children:
                                        - kind: NumericLiteralExpression
                                          children:
                                            - kind: IntegerLiteral
                                              text: "10"
                                    - kind: Comma
                                      text: ","
                                    - kind: Whitespace
                                      text: " "
                                    - kind: Argument
                                      children:
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: Octothorpe
                                              text: "#"
                - kind: IntegerLiteral
                  text: "1"
                - kind: RightParenthesis
                  text: )
                - kind: RightParenthesis
                  text: )
                - kind: Whitespace
                  text: " "
                - kind: GreaterThanOperator
                  text: ">"
                - kind: Whitespace
                  text: " "
                - kind: IntegerLiteral
                  text: "0"
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "        "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: Debug
                - kind: PeriodOperator
                  text: "."
                - kind: PrintKeyword
                  text: Print
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"Data read\""
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: Unknown
              text: End
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: " "
                - kind: IfKeyword
                  text: If
                - kind: IdentifierExpression
                  children:
                    - kind: Newline
                      text: "\n"
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: SubKeyword
                  text: Sub
                - kind: Newline
                  text: "\n"
